--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
   },
   "homepage": "https://github.com/hesi016/lecture-07#readme",
   "devDependencies": {
+    "@types/react": "^19.0.11",
+    "@types/react-dom": "^19.0.4",
+    "typescript": "^5.8.2",
     "vite": "^6.2.2"
   },
   "dependencies": {
