--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "tsc --noEmit && prettier --check .",
     "dev": "vite",
     "build": "vite build"
   },
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/react": "^19.0.11",
     "@types/react-dom": "^19.0.4",
+    "prettier": "^3.5.3",
     "typescript": "^5.8.2",
     "vite": "^6.2.2"
   },
